--- a/style/style.css
+++ b/style/style.css
@@ -184,47 +184,6 @@ h1 {
   cursor: pointer;
 }
 
-/* -------------------------------------------Joind Email From-------------------------- */
-/* .joind {
-  background-image: url(../assets/news-letter-bg.png);
-  margin: auto;
-  align-items: center;
-  margin-bottom: 50px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 500px;
-}
-.joind-from {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: 200px;
-}
-#button-from {
-  display: flex;
-  border: 0;
-}
-#button-from input {
-  padding: 10px 350px 10px 10px;
-  position: relative;
-  right: -2px;
-}
-#button-from button {
-  border: 0;
-  position: relative;
-  left: -1;
-  border-radius: 0;
-}
-.joind-from h1 {
-  color: aliceblue;
-  font-size: 50px;
-  font-weight: bold;
-} */
-
 /* ---------------------Footer---------------------------- */
 .footer {
   width: 1120px;
@@ -289,6 +248,78 @@ h1 {
   padding: 12px 20px;
   font-size: 16px;
 }
+/* -------------------------------------------------- */
+.discound {
+  width: 1140px;
+  margin: auto;
+}
+.deals-section {
+  text-align: center;
+  padding: 20px;
+}
+.deals-section h2 {
+  color: orange;
+  display: inline;
+}
+.deals-section h2 span {
+  color: white;
+}
+.deals-section p {
+  color: #666;
+  max-width: 600px;
+  margin: auto;
+}
+.content-big {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+}
+.content h3 {
+  color: white;
+  font-size: 25px;
+}
+.content a {
+  color: white;
+  font-size: 20px;
+}
+.deal-box1 {
+  background-image: url(../assets/deal-bloom.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 150px;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.deal-box2 {
+  background-image: url(../assets/deal-ana.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 150px;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.deal-box3 {
+  background-image: url(../assets/deal-zabo.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 300px;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.deals-container {
+  display: flex;
+  gap: 20px;
+}
+
+/* -------------------------------Discound------------------------------------------ */
+
 /* Mobile responsive: hide nav-links under 768px */
 
 @media (min-width: 440px) and (max-width: 800px) {
@@ -328,9 +359,12 @@ h1 {
     margin: auto;
   }
   .card {
-    width: 576px;
-    margin: 10px;
-    text-align: center;
+    width: 888px;
+    /* margin: 10px auto; */
+    padding-right: 500px;
+  }
+  .our-pan {
+    padding-right: 350px;
   }
   .flower-plant {
     display: none;
@@ -362,5 +396,15 @@ h1 {
     text-align: center;
     align-items: center;
     justify-content: center;
+  }
+  .discound {
+    width: auto;
+    margin: auto;
+  }
+  .fresh-flower-description {
+    /* padding-top: 100px; */
+    width: 1000px;
+    height: 178px;
+    margin-top: 110px;
   }
 }
